# check_models

./: .editorconfig  .gitignore  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OUTPUT_FORMATTING_REVIEW.md  PYTHON_313_MIGRATION.md  README.md  REORGANIZATION_SUMMARY.md  RESTRUCTURE_COMPLETED.md  STYLE_GUIDE.md  llava-mytest.py  llms-mytest.py  planOutputReadability.prompt.md  pyproject.toml  pytest.ini  results.html  results.md
src/: .ci_collect.txt  .ci_tests.txt  .gitignore  .test_collect.txt  Makefile  README.md  __init__.py  check_models.py  check_models.suppression-audit.9s7exflh.py  package.json  pyproject.toml  pytest.ini  quality_config.yaml  requirements-dev.in  requirements-dev.txt  requirements.txt  results.html
src/check_models_data/: __init__.py  dependency_policy.py  quality_config.yaml
src/output/: README.md  baseline.txt  diagnostics.md  github_issue_mlx_vlm_trust_remote_code.md  github_issue_report.md  index.md  model_benchmark_review_2026-02-13.md  model_capabilities.json  model_gallery.md  results.history.jsonl  results.html  results.jsonl  results.md  results.tsv  review.md  run.json
src/output/issues/: index.md  issue_001_crash.md  issue_001_harness.md  issue_001_huggingface-hub_huggingface-hub-model-load-model_001.md  issue_001_mlx-vlm_mlx-vlm-decode-model_001.md  issue_001_mlx-vlm_mlx-vlm-model-load-model_001.md  issue_001_mlx-vlm_stop-token_001.md  issue_001_mlx_mlx-decode-model_001.md  issue_001_mlx_mlx-model-load-model_001.md  issue_001_mlx_mlx-model-load-weight-mismatch_001.md  issue_001_model-configuration-repository_model-config-processor-load-processor_001.md  issue_001_unresolved-mlx-mlx-vlm_mlx-vlm-decode-model_001.md  issue_002_crash.md  issue_002_harness.md  issue_002_mlx-vlm-mlx_long-context_001.md  issue_002_mlx-vlm_encoding_001.md  issue_002_mlx-vlm_mlx-vlm-decode-error_001.md  issue_002_mlx-vlm_mlx-vlm-decode-model_001.md  issue_002_mlx-vlm_mlx-vlm-model-load-model_001.md  issue_002_mlx-vlm_stop-token_001.md  issue_002_mlx_mlx-model-load-model_001.md  issue_002_mlx_mlx-model-load-weight-mismatch_001.md  issue_002_model-config-mlx-vlm_prompt-template_001.md  issue_002_model-configuration-repository_model-config-processor-load-processor_001.md  issue_002_model_text-sanity_001.md  issue_003_crash.md  issue_003_harness.md  issue_003_mlx-lm_mlx-lm-model-load-model_001.md  issue_003_mlx-vlm-mlx_long-context_001.md  issue_003_mlx-vlm_encoding_001.md  issue_003_mlx-vlm_mlx-vlm-model-load-model_001.md  issue_003_mlx-vlm_stop-token_001.md  issue_003_model-config-mlx-vlm_prompt-template_001.md  issue_003_model-configuration-repository_model-config-processor-load-processor_001.md  issue_003_model_text-sanity_002.md  issue_004_harness.md  issue_004_mlx-vlm-mlx_long-context_001.md  issue_004_mlx-vlm-mlx_long-context_002.md  issue_004_mlx-vlm_encoding_001.md  issue_004_mlx-vlm_stop-token_001.md  (+31 more)
src/output/reports/: diagnostics.md  model_capabilities.md  model_gallery.md  model_selection.md  results.html  results.md  results.tsv  review.md
src/output/repro_bundles/: 20260215T032734Z_001_microsoft_Florence-2-large-ft_MLX_MODEL_LOAD_WEIGHT_MISMATCH_ecbbb1f91.json  20260215T032734Z_002_mlx-community_X-Reasoner-7B-8bit_MLX_DECODE_OOM_82da64fabb32.json  20260215T032734Z_003_mlx-community_deepseek-vl2-8bit_MODEL_CONFIG_PROCESSOR_LOAD_PROCESSOR_ba.json  (+976 more)
src/tests/: conftest.py  test_analyze_output_quality.py  test_cataloging_utility.py  test_cli_help_output.py  test_cli_integration.py  test_dependency_sync.py  test_e2e_smoke.py  test_edge_case_images.py  test_encoding.py  test_error_classification.py  test_error_handling.py  test_error_message_consistency.py  test_exif_extraction.py  test_exif_metadata.py  test_exif_robustness.py  test_format_field_value.py  test_gps_coordinates.py  test_gps_robustness.py  test_html_formatting.py  test_html_full_name.py  test_image_workflow.py  test_invalid_arguments.py  test_jsonl_output.py  test_markdown_formatting.py  test_memory_formatting.py  test_metrics_modes.py  test_model_discovery.py  test_parameter_validation.py  test_performance_metrics.py  test_process_image_mock.py  test_pure_logic_functions.py  test_quality_analysis.py  test_report_generation.py  test_result_sorting.py  test_text_utilities.py  test_time_formatting.py  test_total_runtime_reporting.py  test_tps_formatting.py  test_tsv_output.py  test_validate_env.py  (+1 more)
src/tools/: .shellcheckrc  analyze_output_quality.py  bugtest.py  check_outdated.py  check_quality.py  check_quality_simple.sh  check_suppressions.py  clean_builds.sh  common_quality.sh  generate_stubs.py  install_precommit_hook.py  qwen3_vl_sequential_repro.py  run_commit_hygiene.sh  run_quality.sh  run_quality_checks.sh  run_runtime_smoke.sh  run_skylos_danger_advisory.sh  run_skylos_verify.sh  run_ty_check.sh  safe_io.py  setup_conda_env.sh  smoke_test.py  update.sh  update_readme_deps.py  validate_env.py
src/tools/.archived/: README.md  check_quality.py  patch_mlx_stubs.py
vlm/: .ci_collect.txt  .ci_tests.txt  .gitignore  .test_collect.txt  Makefile  README.md  __init__.py  bug.py  check_models.py  deepseek.py  ds.py  internvl25.py  issue.py  llama32.py  llama32vi.py  llama33.py  llava.txt  models.txt  mytest.py  mytest2.py  mytest3.py  phi4-4bit.py  pyproject.toml  pytest.ini  qwen2.py  qwq.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  results.html  results.md  ruff.toml  smoke_test.py  test_error_handling.py  test_format.py  test_format_field_value.py  test_formatting.py  test_generation_result.py  test_markdown_chars.py  (+6 more)
vlm/tests/: __init__.py  test_dependency_sync.py  test_format_field_value.py  test_metrics_modes.py  test_total_runtime_reporting.py
vlm/tools/: __init__.py  check_dependency_sync.py  check_outdated.py  check_quality.py  generate_stubs.py  install_precommit_hook.py  run_quality.sh  setup_conda_env.sh  smoke_test.py  update.sh  update_readme_deps.py  validate_env.py
(+255 files in other folders)
