[project]
name = "check_models"
description = "Image analysis and caption generation using MLX Vision Language Models."
version = "0.1.0"
authors = [{ name = "jrp2014", email = "jrp2014@users.noreply.github.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mlx", "vision", "language-model", "ai", "image-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Environment :: Console",
]
# PEP 621: declare runtime dependencies as an inline array instead of a key/value table.
# This keeps ordering deterministic and simplifies automated parsing.
# Runtime intentionally slim: only what `check_models.py` imports directly.
# Everything else lives in extras to reduce cold install surface & build time.
dependencies = [
    # Minimal runtime set actually imported by check_models.py
    "mlx>=0.29.1",
    "mlx-vlm>=0.3.0",
    "Pillow>=10.3.0",
    "huggingface-hub[cli,torch,typing]>=0.34.0,<1.0", # Constrained by transformers 4.57.1
    "tabulate>=0.9.0",
    "tzlocal>=5.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/jrp2014/check_models"
Repository = "https://github.com/jrp2014/check_models"
Issues = "https://github.com/jrp2014/check_models/issues"

[project.scripts]
# Use fully-qualified module path for the CLI entry point
check_models = "check_models:main_cli"

[tool.setuptools]
py-modules = ["check_models"]

[project.optional-dependencies]
# Optional dependencies grouped by use case.
extras = [
    # Hardware metrics (optional system block)
    "psutil>=5.9.0",
    # Fast tokenizer backends
    "tokenizers>=0.15.0",
    # Tensor operations (required by some model architectures)
    "einops>=0.6.0",
    # Number-to-words conversion (required by some model processors)
    "num2words>=0.5.0",
    # Language-model utilities & transformer inference (not required for base benchmarking)
    "mlx-lm>=0.23.0",
    "transformers>=4.53.0",
    "sentencepiece",
]
torch = ["torch>=2.2.0", "torchvision>=0.17.0", "torchaudio>=2.2.0"]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "ty",
    "pyrefly",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "types-tabulate",
    "types-tqdm",
    "types-psutil",
    "types-PyYAML",
    "ninja",
]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv*",
    "__pycache__",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "src/tools/.archived",
    "venv",
]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Comprehensive linting - enable ALL rules, then selectively ignore conflicts
# This is simpler and more maintainable than listing individual categories
select = ["ALL"]

ignore = [
    # Formatter compatibility
    "E501",   # Line too long (formatter handles this)
    "W191",   # Tab indentation (formatter handles this)
    "E111",   # Indentation (formatter handles this)
    "E114",   # Indentation (formatter handles this)
    "E117",   # Over-indented (formatter handles this)
    "COM812", # Trailing comma (conflicts with formatter)
    "COM819", # Trailing comma (conflicts with formatter)
    "ISC001", # Single line implicit concatenation (conflicts with formatter)
    "ISC002", # Multi line implicit concatenation (conflicts with formatter)
    "Q000",   # Quotes (formatter handles this)
    "Q001",   # Quotes (formatter handles this)
    "Q002",   # Quotes (formatter handles this)
    "Q003",   # Quotes (formatter handles this)

    # Docstring style conflicts (mutually exclusive pairs)
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)

    # Stylistic choices
    "ANN401", # Dynamically typed Any - we use this intentionally
    "FBT001", # Boolean positional arg - common pattern
    "FBT002", # Boolean default arg - common pattern
    "TD002",  # Missing TODO author - not critical
    "TD003",  # Missing TODO link - not critical
    "FIX002", # TODO/FIXME comments - we want these

    # Too aggressive for existing codebase
    "ERA001",  # Commented code - sometimes useful for comparison
    "S311",    # random module - not a security issue in this context
    "PLR0913", # Too many arguments - some functions need them
    "PLR2004", # Magic values - sometimes clearer than constants
]

[tool.ruff.lint.per-file-ignores]
# Tests: minimal necessary exclusions
"tests/**" = [
    "S101",    # Use of assert - required for pytest
    "D103",    # Missing docstring in public function - test names are self-documenting
    "PLR2004", # Magic values in test assertions - values match test parameters
]
# Tools: allow print statements, missing docstrings
"tools/**" = [
    "T201", # Print statements
    "D",    # Docstrings not required in tools
    "ANN",  # Type annotations not required in tools
]
# Archived files: ignore all rules (these are not maintained)
"tools/.archived/**" = ["ALL"]

# Specific ignores for subprocess calls with hardcoded arguments
"**/tests/**" = ["S101"]
"**/check_models.py" = ["S603"]


[tool.ruff.lint.pydocstyle]
# Use Google docstring convention (resolves D203/D211 and D212/D213 conflicts)
convention = "google"

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity - balance between strictness and practicality
max-complexity = 15

[tool.ruff.lint.pylint]
# Pylint-specific settings
max-args = 10
max-branches = 15
max-statements = 60

[tool.pyright]
# Pyright/Pylance configuration
# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
pythonVersion = "3.13"
typeCheckingMode = "basic" # Can be "off", "basic", or "strict"
# Allow imports from libraries without type stubs (mlx, mlx-vlm, etc.)
reportMissingImports = false
reportMissingTypeStubs = false
reportUnusedImport = "warning"
# Ignore type errors in third-party libraries without stubs
reportAttributeAccessIssue = "none"

[tool.mypy]
# Pragmatic type checking with MLX library support
python_version = "3.13"
# Skip following imports into external libraries to avoid their stub errors
# This focuses type checking on our code while still using type info from libraries
follow_imports = "skip"
# Ignore missing imports for libraries without stubs
ignore_missing_imports = true
# Exclude archived tools
exclude = ["^src/tools/\\.archived/"]
# Include local type stubs if generated (update.sh can generate stubs for local MLX builds)
mypy_path = "typings"

# Core strictness - catch common errors in our own code
warn_unused_ignores = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true

# Ignore errors in tests (they intentionally test edge cases)
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Ignore errors in MLX libraries (avoid issues with stubs in older/newer versions)
[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_vlm.*", "mlx_lm.*", "tokenizers.*", "huggingface_hub.*"]
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.ty]
# ty (Astral's type checker) configuration
# Disable unresolved-import rule - mlx ecosystem packages work at runtime
# but are installed as editable/local packages without proper type stubs
rules = { unresolved-import = "ignore" }

[tool.pytest.ini_options]
# Limit test discovery to the dedicated tests package inside the project
# (avoids collecting helper scripts or example snippets).
testpaths = ["tests"]
# Keep output concise; individual developers can override locally if needed.
addopts = "-q"

[tool.pyrefly]
project-excludes = ["**/src/tools/.archived/"]
search-path = ["typings"]
python-version = "3.13"
#conda-environment = "mlx-vlm"
ignore-missing-imports = [
    "mlx.*",
    "mlx_vlm.*",
    "mlx_lm.*",
    "tokenizers.*",
    "huggingface_hub.*",
    "*",
]


[tool.setuptools.package-data]
"*" = ["*.yaml"]
