[project]
name = "check_models"
description = "Image analysis and caption generation using MLX Vision Language Models."
version = "0.7.2"
authors = [{ name = "jrp2014", email = "jrp2014@users.noreply.github.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mlx", "vision", "language-model", "ai", "image-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Environment :: Console",
]
# PEP 621: declare runtime dependencies as an inline array instead of a key/value table.
# This keeps ordering deterministic and simplifies automated parsing.
# Runtime intentionally slim: only the MLX stack and libraries required for
# benchmark execution ship by default. Everything else lives in extras to
# reduce cold install surface & build time.
# NOTE: Some deps below are also pulled transitively by other runtime deps
# (for example Pillow/PyYAML via mlx-vlm and defusedxml via Pillow[xmp]) but are
# listed explicitly to allow version pinning and ensure they're available if
# upstream dependency graphs change.
dependencies = [
    # Core MLX runtime stack required by benchmark execution
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "mlx-vlm>=0.5.0",
    # Project-level compatibility floor for the MLX ecosystem.
    "transformers>=5.5.3",
    "defusedxml>=0.7.1",
    "Pillow[xmp]>=12.2.0",
    "huggingface-hub[torch,typing]>=1.10.1",
    "numpy>=2.1.0",
    "packaging>=26.0",
    "rich>=14.1.0",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/jrp2014/check_models"
Repository = "https://github.com/jrp2014/check_models"
Issues = "https://github.com/jrp2014/check_models/issues"

[project.scripts]
# Use fully-qualified module path for the CLI entry point
check_models = "check_models:main_cli"

[tool.setuptools]
py-modules = ["check_models"]
packages = ["check_models_data"]

[project.optional-dependencies]
# Optional dependencies grouped by use case.
extras = [
    # Hardware metrics (optional system block)
    "psutil>=5.9.0",
    # Fast tokenizer backends
    "tokenizers>=0.15.0",
    # Tensor operations (required by some model architectures)
    "einops>=0.6.0",
    # Number-to-words conversion (required by some model processors)
    "num2words>=0.5.0",
    "sentencepiece",
]
torch = ["torch>=2.2.0", "torchvision>=0.17.0", "torchaudio>=2.2.0", "timm"]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "ty",
    "pyrefly",
    "vulture>=2.16",
    "skylos>=4.15.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0", # Parallel test execution
    "pydantic>=2.0.0",
    "types-tabulate",
    "types-tqdm",
    "types-psutil",
    "types-PyYAML",
    "types-defusedxml",
    "pre-commit",
    "nanobind==2.12.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.skylos]
# Keep the package-local scan focused on maintained source. Generated run
# artifacts and lockfiles are covered by their own workflows and can contain
# model output or dependency hashes that look secret-like to generic scanners.
#
# Quality thresholds are calibrated to this repo's documented shape:
# `check_models.py` is an intentional single-file CLI, report/CLI builders are
# cohesive pipelines, and tests are grouped by behavior rather than LCOM.
complexity = 24
nesting = 6
max_lines = 450
duplicate_strings = 40
addopts = ["--format", "concise"]
exclude = [
    "output",
    "package-lock.json",
    "node_modules",
    "build",
    "dist",
    "*.egg-info",
    "check_models.suppression-audit*.py",
]
ignore = [
    "SKY-C303", # CLI/test helper signatures intentionally favor explicit kwargs.
    "SKY-C401", # Small report-summary clones are clearer than generic indirection.
    "SKY-L004", # Cohesive orchestration try blocks are documented as acceptable.
    "SKY-L017", # CLI diagnostics intentionally include local probe errors.
    "SKY-L026", # Protocol method ellipses are intentional interface declarations.
    "SKY-L028", # Early returns keep validation and CLI branches readable.
    "SKY-L029", # Boolean flags are common in CLI plumbing and tests.
    "SKY-P403", # Nested loops here are small test/image/report assembly loops.
    "SKY-Q306", # Cognitive-complexity threshold is not configurable in Skylos.
    "SKY-Q501", # Large test classes group behavior around one subsystem.
    "SKY-Q502", # check_models.py is intentionally maintained as a single-file CLI.
    "SKY-Q701", # TypedDict/dataclass coupling reflects result schema typing.
    "SKY-Q702", # LCOM is noisy for pytest grouping and Protocol surfaces.
    "SKY-Q802", # I/A/D module metrics are advisory for CLI/tool modules.
    "SKY-Q803", # Zone-of-pain module metrics are advisory for policy constants.
    "SKY-R104", # Package-local scans run below the repo-level pre-commit config.
    "SKY-U005", # mlx-lm is a required runtime stack dependency even without imports.
]

[tool.skylos.gate]
fail_on_critical = true
max_critical = 0
max_high = 0
max_security = 0
max_quality = 10000
strict = false

[tool.ruff]
line-length = 100
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv*",
    "__pycache__",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "src/tools/.archived",
    "venv",
]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Comprehensive linting - enable ALL rules, then selectively ignore conflicts
# This is simpler and more maintainable than listing individual categories
select = ["ALL"]

ignore = [
    # === Formatter compatibility (ruff format handles these) ===
    "E501",   # Line too long (formatter handles this)
    "W191",   # Tab indentation (formatter handles this)
    "E111",   # Indentation (formatter handles this)
    "E114",   # Indentation (formatter handles this)
    "E117",   # Over-indented (formatter handles this)
    "COM812", # Trailing comma (conflicts with formatter)
    "COM819", # Trailing comma (conflicts with formatter)
    "ISC001", # Single line implicit concatenation (conflicts with formatter)
    "ISC002", # Multi line implicit concatenation (conflicts with formatter)
    "Q000",   # Quotes (formatter handles this)
    "Q001",   # Quotes (formatter handles this)
    "Q002",   # Quotes (formatter handles this)
    "Q003",   # Quotes (formatter handles this)

    # === Docstring style conflicts (mutually exclusive pairs) ===
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)

    # === Stylistic choices (intentional design decisions) ===
    "ANN401", # Dynamically typed Any - used for mlx library interop
    "FBT001", # Boolean positional arg - common pattern in CLI tools
    "FBT002", # Boolean default arg - common pattern in CLI tools
    "TD002",  # Missing TODO author - not critical for small team
    "TD003",  # Missing TODO link - not critical for small team
    "FIX002", # TODO/FIXME comments - we want these visible

    # === Complexity thresholds (configured separately via pylint section) ===
    "PLR0913", # Too many arguments - configured via max-args=10

    # === Security rules - S311 only (others use targeted noqa with justification) ===
    # S311: random module used for non-cryptographic purposes (seed generation)
    # S603/S607/S310/S105: use targeted # noqa comments with justification
    "S311", # random module - deterministic seeds, not cryptographic
]

[tool.ruff.lint.per-file-ignores]
# Tests: minimal necessary exclusions
# Both "tests/**" (for CLI from src/) and "src/tests/**" (for VS Code extension
# from workspace root) are needed so per-file-ignores resolve correctly.
"tests/**" = [
    "S101",    # Use of assert - required for pytest
    "S105",    # Hardcoded password - false positives on test string comparisons
    "D103",    # Missing docstring in public function - test names are self-documenting
    "PLR2004", # Magic values in test assertions - values match test parameters
    "SLF001",  # Private member access - tests need to verify internal functions
    "ARG001",  # Unused argument - pytest fixtures may have unused params
]
"src/tests/**" = [
    "S101",    # Use of assert - required for pytest
    "S105",    # Hardcoded password - false positives on test string comparisons
    "D103",    # Missing docstring in public function - test names are self-documenting
    "PLR2004", # Magic values in test assertions - values match test parameters
    "SLF001",  # Private member access - tests need to verify internal functions
    "ARG001",  # Unused argument - pytest fixtures may have unused params
]
# Tools: allow intentional CLI prints and fixed-command robustness patterns.
"tools/**" = [
    "T201",   # Print statements - tools are CLI utilities
    "S603",   # subprocess calls - tool commands are hardcoded, not user input
    "S607",   # partial executable path - tools call known commands in PATH
    "BLE001", # blind Exception - tools use broad catches for robustness
]
"src/tools/**" = [
    "T201",   # Print statements - tools are CLI utilities
    "S603",   # subprocess calls - tool commands are hardcoded, not user input
    "S607",   # partial executable path - tools call known commands in PATH
    "BLE001", # blind Exception - tools use broad catches for robustness
]
# Archived files: ignore all rules (these are not maintained)
"tools/.archived/**" = ["ALL"]
"src/tools/.archived/**" = ["ALL"]

[tool.ruff.lint.pydocstyle]
# Use Google docstring convention (resolves D203/D211 and D212/D213 conflicts)
convention = "google"

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity - balance between strictness and practicality
max-complexity = 75


[tool.ruff.lint.pylint]
# Pylint-specific settings
max-args = 10
max-branches = 15
max-statements = 60

[tool.pyright]
# Pyright/Pylance configuration
# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
pythonVersion = "3.13"
typeCheckingMode = "basic" # Can be "off", "basic", or "strict"
# Keep missing-import diagnostics visible, but non-blocking, since some
# runtime deps do not publish complete typing metadata.
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
# Keep attribute-access diagnostics enabled.
reportAttributeAccessIssue = "warning"

[tool.mypy]
# Pragmatic type checking with MLX library support
python_version = "3.13"
# Skip following imports into external libraries to avoid their stub errors
# This focuses type checking on our code while still using type info from libraries
follow_imports = "skip"
# Do not globally suppress missing imports; use targeted overrides below.
ignore_missing_imports = false
# Exclude archived tools
exclude = ["^src/tools/\\.archived/"]
# Include local type stubs if generated (update.sh can generate stubs for local MLX builds)
mypy_path = "typings"

# Core strictness - catch common errors in our own code
warn_unused_ignores = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true

# Ignore errors in tests (they intentionally test edge cases)
[[tool.mypy.overrides]]
module = "tests.*"
# Tests may call functions with various types for edge case testing
disallow_untyped_defs = false
warn_return_any = false
# Allow broader exception handling in tests
strict_optional = false

# Allow missing stubs for third-party runtime dependencies used by check_models.py.
[[tool.mypy.overrides]]
module = [
    "defusedxml.*",
    "huggingface_hub.*",
    "mlx.*",
    "numpy",
    "PIL.*",
    "psutil",
    "requests",
    "tabulate",
    "tzlocal",
    "yaml",
]
ignore_missing_imports = true
follow_imports = "skip"

# Auto-generated stubs for MLX packages: use "normal" to type-check call sites
# against stub signatures.  Missing stubs remain non-fatal.
[[tool.mypy.overrides]]
module = ["mlx_lm", "mlx_lm.*", "mlx_vlm", "mlx_vlm.*"]
ignore_missing_imports = true
follow_imports = "normal"

# Auto-generated stubs for transformers/tokenizers.  Use "silent" to read type
# info at call sites without reporting errors within the (noisy) generated stubs.
[[tool.mypy.overrides]]
module = ["tokenizers", "tokenizers.*", "transformers", "transformers.*"]
ignore_missing_imports = true
follow_imports = "silent"

[tool.ty]
# ty (Astral's type checker) configuration

[tool.ty.environment]
# Prefer repo-local generated stubs for packages like mlx-vlm that do not ship
# complete import-resolvable typing metadata in site-packages.
# Do not hardcode `python` here: this project uses an external conda env whose
# absolute path is machine-specific, so repo automation passes `--python`
# explicitly from the resolved target environment.
extra-paths = ["../typings"]

[tool.vulture]
paths = ["check_models.py", "tools"]
exclude = ["tests/", "tools/.archived/", "../typings/", "*.egg-info"]
min_confidence = 100
sort_by_size = true

[tool.pytest.ini_options]
# Limit test discovery to the dedicated tests package inside the project
# (avoids collecting helper scripts or example snippets).
testpaths = ["tests"]
# Keep output concise; individual developers can override locally if needed.
addopts = "-q"
# Register custom markers for selective test execution
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end integration tests requiring model inference",
]

[tool.pyrefly]
project-excludes = ["**/src/tools/.archived/"]
search-path = ["../typings"]
python-version = "3.13"
# Shared quality scripts inject `python-interpreter-path` from the resolved
# QUALITY_PYTHON so local and CI runs use the same site-packages without
# hardcoding a machine-specific interpreter path here.


[tool.setuptools.package-data]
check_models_data = ["*.yaml"]
