[project]
name = "mlx-vlm-check"
description = "Image analysis and caption generation using MLX Vision Language Models."
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mlx", "vision", "language-model", "ai", "image-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jrp2014/scripts"
Repository = "https://github.com/jrp2014/scripts"
Issues = "https://github.com/jrp2014/scripts/issues"

[project.scripts]
# Use fully-qualified module path for the CLI entry point (module inside vlm package)
mlx-vlm-check = "vlm.check_models:main_cli"

# PEP 621: declare runtime dependencies as an inline array instead of a key/value table.
# This keeps ordering deterministic and simplifies automated parsing.
dependencies = [
    # Core MLX dependencies (raised minimums to align with currently tested APIs)
    "mlx>=0.14.0",
    "mlx-vlm>=0.0.9",
    # Image processing
    "Pillow>=10.0.0",
    # Model and caching utilities
    "huggingface-hub>=0.23.0",
    # Report generation
    "tabulate>=0.9.0",
    # System utilities
    "tzlocal>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vlm*"]

[project.optional-dependencies]
# Optional dependencies for enhanced functionality
extras = [
    # Newer transformers provides improved multimodal templates & bug fixes
    "transformers>=4.41.0,<5",
    "mlx-lm>=0.10.0",
    # Hardware metrics (optional system block)
    "psutil>=5.9.0",
    # Tokenization utilities (optional; used for versions/introspection only)
    "tokenizers>=0.15.0",
]

# Guidance: Torch is supported but not required globally; install only when needed for specific models.
# Example (uncomment to use a curated torch extra):
# torch = [
#     "torch>=2.2.0; platform_system == 'Darwin'",
#     "torchvision>=0.17.0; platform_system == 'Darwin'",
#     "torchaudio>=2.2.0; platform_system == 'Darwin'",
# ]

# Development dependencies
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0", 
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.8.0", 
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# D203 and D213 are explicitly excluded to avoid incompatibility warnings with D211 and D212.
# Select all rules and then ignore the ones that are incompatible or too noisy.
extend-select = ["B"]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter
    "D203",    # Conflicts with D211
    "D213",    # Conflicts with D212
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Missing docstrings
    "S101", # Use of assert
    "E501", # Line too long
]

[tool.pylance]
# Pyright/Pylance configuration
# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
pythonVersion = "3.12"
typeCheckingMode = "basic" # Can be "off", "basic", or "strict"
reportMissingImports = true
reportUnusedImport = "warning"

[tool.mypy]
# MyPy configuration
# See: https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.12"
ignore_missing_imports = true
# For stricter checking, you can enable the following:
# disallow_untyped_defs = true
# warn_return_any = true
warn_unused_configs = true
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]
indent-width = 4
